# vobchat

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  add_test_user_sql.py  app.py  config.py  create_user.py  deepseekr1_template.model  diagram.md  docker-compose.yml  docker-start.sh  gunicorn.conf.py  maindash.py  mapinit.py  prompts.py  pyproject.toml  requirements.txt  setup.py  test_intent_extraction.py  test_vobchat_integration.py  tools.py  vobchat.service  workflow.py
app/: __init__.py  config.py  configure_logging.py  main.py  mapinit.py  stores.py  tools.py  types.py  vobchat.service  workflow.py
app/api/: bounding_box_routes.py  polygon_routes.py
app/assets/: dashExtensions_default.js  map_leaflet.js  polygon_management.js  resizeable.css  resizeable.js  visualization_enhancements.js
app/callbacks/: chat.py  clientside_callbacks.py  map.py  map_leaflet.py  visualization.py
app/components/: chat.py  map.py  visualization.py
app/utils/: constants.py  helpers.py  polygon_cache.py  redis_checkpoint.py
instance/: users.db
src/: agent_routing.py  app.py  gunicorn.conf.py  intent_handling.py  state_nodes.py  state_schema.py  stores.py  test_intent_handling.py  tools.py  workflow.py
src/api/: bounding_box_routes.py  polygon_routes.py
src/assets/: custom.css  map_leaflet.js  polygon_management.js  resizeable.css  resizeable.js  visualization_enhancements.js
src/callbacks/: chat.py  clientside_callbacks.py  visualization.py
src/components/: chat.py  map.py
src/utils/: polygon_cache.py  redis_checkpoint.py
src/vobchat/: __init__.py  agent_routing.py  app.py  cli.py  config.py  configure_logging.py  conversational_agent.py  gunicorn.conf.py  intent_handling.py  intent_subagents.py  llm_factory.py  models.py  sse_manager.py  state_nodes.py  state_nodes.py.backup  state_schema.py  stores.py  tools.py  workflow.py  workflow_sse_adapter.py
(+48 files in other folders)
